# chess_ocr

./: README.md  drawing_utils.py  find_board.py  machine_learning.py  main.py  training_text.txt
docs/ChESS/: Makefile  Makefile.am  Makefile.in  TRACKER-VERSION-FILE  autogen.sh  chess.c  chess_features.c  chess_features.h  config.h  config.h.in  config.status  configure  configure.ac  corner_detect.c  corner_detect.h  feature_orientation.c  feature_orientation.h  gaussian_blur5.c  gaussian_blur5.h  non_max_sup_pts.c  non_max_sup_pts.h  pgm.c  pgm.h  stdutil.h
docs/ChESS/autom4te.cache/: output.0  requests  traces.0  traces.1
feature_detectors/: __init__.py  board_detectors.py  chess.c  edge_detectors.py  square_detectors.py
